# smoltcp-uefi

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
examples/: ping.rs
scripts/: get_ovmf_from_nix.sh  test_on_qemu.sh
src/: convert.rs  device.rs  lib.rs  time.rs
